--- a/Assigned Works/Juypter Notebook/1-Tanapat Samakit.ipynb
+++ b/Assigned Works/Juypter Notebook/1-Tanapat Samakit.ipynb
@@ -40,7 +40,9 @@
     "        mergeSort(R)\r\n",
     "\r\n",
     "        #Initial index of L,R, and Arr\r\n",
-    "        i = j = k = 0\r\n",
+    "        i = 0\r\n",
+    "        j = 0\r\n",
+    "        k = 0\r\n",
     "\r\n",
     "        #Compare within Array\r\n",
     "        while (i < len(L) and j < len(R)):\r\n",
@@ -95,6 +97,58 @@
       "==============================\n",
       "Input Array: [56, 90, 38, 45, 43]\n",
       "Merge Sorted Array: [38, 43, 45, 56, 90]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "source": [
+    "import random as rd\r\n",
+    "import math\r\n",
+    "\r\n",
+    "def insertionSort(Arr):\r\n",
+    "    # Check Length of Input\r\n",
+    "    if int(len(Arr)) > 1 :\r\n",
+    "        i = 1\r\n",
+    "\r\n",
+    "        #Loop for each index of Array\r\n",
+    "        while i < len(Arr):\r\n",
+    "            Arr_Val = Arr[i]    \r\n",
+    "            j = i-1\r\n",
+    "            print(f'Cur_Val: {Arr_Val}')\r\n",
+    "            #check all the previous values compared to A[i]\r\n",
+    "            while j >= 0 and Arr_Val < Arr[j] :\r\n",
+    "                Arr[j+1] = Arr[j]\r\n",
+    "                print(Arr)\r\n",
+    "                j = j-1\r\n",
+    "            \r\n",
+    "            Arr[j+1] = Arr_Val\r\n",
+    "            i = i+1          \r\n",
+    "\r\n",
+    "\r\n",
+    "Test_Arr = rd.sample(range(1,100),5)\r\n",
+    "print(f'Input Array: {Test_Arr}')\r\n",
+    "insertionSort(Test_Arr)\r\n",
+    "print(f'Insertion Sorted Array: {Test_Arr}')\r\n",
+    "print('='*30)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Input Array: [27, 79, 93, 83, 85]\n",
+      "Cur_Val: 79\n",
+      "Cur_Val: 93\n",
+      "Cur_Val: 83\n",
+      "[27, 79, 93, 93, 85]\n",
+      "Cur_Val: 85\n",
+      "[27, 79, 83, 93, 93]\n",
+      "Insertion Sorted Array: [27, 79, 83, 85, 93]\n",
+      "==============================\n"
      ]
     }
    ],
