Add case for left parenthesis remaining

--- a/Assigned Works/Juypter Notebook/7-Tanapat.ipynb
+++ b/Assigned Works/Juypter Notebook/7-Tanapat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7a91d93e",
    "metadata": {},
    "outputs": [
@@ -13,7 +13,8 @@
       "{[]{(Test)}} - ok\n",
       "[{}{})(Test] - not ok\n",
       "(Test) Hello - ok\n",
-      "(Test) Hello(()) - ok\n"
+      "(Test) Hello(()) - ok\n",
+      "123456((Test) Hello(()) - not ok\n"
      ]
     }
    ],
@@ -31,8 +32,9 @@
     "            if((len(Stack)>0)) and (op[cp_pos] == Stack[len(Stack)-1]):\n",
     "                Stack.pop()\n",
     "            else: return \"not ok\"\n",
+    "                  \n",
     "    if len(Stack) == 0: return \"ok\"\n",
-    "    \n",
+    "    else: return \"not ok\"\n",
     "\n",
     "string = \"{[]{(Test)}}\"\n",
     "print(string,\"-\", check_Paranthesis(string))\n",
@@ -41,6 +43,8 @@
     "string = \"(Test) Hello\"\n",
     "print(string,\"-\", check_Paranthesis(string))\n",
     "string = \"(Test) Hello(())\"\n",
+    "print(string,\"-\", check_Paranthesis(string))\n",
+    "string = \"123456((Test) Hello(())\"\n",
     "print(string,\"-\", check_Paranthesis(string))"
    ]
   },
